Refactor `BatchDispatcher` and `GroupDispatcher` constructors to remove unused `system` parameter; fix tests.